Revert, still buggy on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -30,7 +30,7 @@
             margin-left: 3px;
         }
         .discourse-tags::before {
-            font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f02b";
+            content: "🔖";
             margin-left: 5px;
             margin-right: 2px;
         }
